First behat with mink test
Fix behat.yml setting

Add MinkContext extends to FeatureContext

--- a/behat.yml
+++ b/behat.yml
@@ -1,6 +1,8 @@
-defalut:
+default:
     extensions:
-        Laracasts\Behat\ServiceContainer\LaravelExtension: ~
+        Laracasts\Behat\ServiceContainer\BehatExtension: ~
+            # ~ means default
+            # env_path: .evn.behat
         Behat\MinkExtension\ServiceContainer\MinkExtension:
             default_session: laravel
             laravel: ~
