--- a/behat.yml
+++ b/behat.yml
@@ -2,7 +2,7 @@ default:
     extensions:
         Laracasts\Behat\ServiceContainer\BehatExtension: ~
             # ~ means default
-            # env_path: .evn.behat
+            # env_path: .env.behat
         Behat\MinkExtension\ServiceContainer\MinkExtension:
             default_session: laravel
             laravel: ~
